--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ hs_err_pid*
 /2_Java/PuebasJS/nbproject/private/
 /2_Java/PuebasJS/build/
 /2_Java/PuebasJS/dist/
+/2_Java/EjemplosPOO/nbproject/private/
+/2_Java/EjemplosPOO/build/
+/2_Java/SolucionEjemplosPOO/nbproject/private/
+/2_Java/SolucionEjemplosPOO/build/
+/2_Java/SolucionEjemplosPOO/dist/
+/2_Java/Cifrador_Archivos/nbproject/private/
+/2_Java/Cifrador_Archivos/build/
