--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ hs_err_pid*
 /2_Java/SolucionEjemplosPOO/dist/
 /2_Java/Cifrador_Archivos/nbproject/private/
 /2_Java/Cifrador_Archivos/build/
+/2_Java/EjemplosPOO/dist/
