--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ hs_err_pid*
 /2_Java/Cifrador_Archivos/nbproject/private/
 /2_Java/Cifrador_Archivos/build/
 /2_Java/EjemplosPOO/dist/
+/2_Java/EjemplosServlet/nbproject/private/
+/2_Java/EjemplosServlet/build/
