--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ hs_err_pid*
 /2_Java/EjemplosPOO/dist/
 /2_Java/EjemplosServlet/nbproject/private/
 /2_Java/EjemplosServlet/build/
+/2_Java/EjemplosServlet/dist/
