--- a/2_Java/EjemplosServlet/web/WEB-INF/web.xml
+++ b/2_Java/EjemplosServlet/web/WEB-INF/web.xml
@@ -18,6 +18,10 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.servlets.LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CambiarDatosServlet</servlet-name>
+        <servlet-class>com.servlets.CambiarDatosServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>HolaServlet</servlet-name>
         <url-pattern>/hola</url-pattern>
@@ -33,5 +37,9 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CambiarDatosServlet</servlet-name>
+        <url-pattern>/cambiarDatos</url-pattern>
     </servlet-mapping>
 </web-app>
