--- a/2_Java/EjemplosServlet/web/WEB-INF/web.xml
+++ b/2_Java/EjemplosServlet/web/WEB-INF/web.xml
@@ -18,6 +18,14 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.servlets.LoginServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+        <servlet-name>EliminarServlet</servlet-name>
+        <servlet-class>com.servlets.EliminarServlet</servlet-class>
+    </servlet>
+    
+    
+    
     <servlet-mapping>
         <servlet-name>HolaServlet</servlet-name>
         <url-pattern>/hola</url-pattern>
@@ -33,5 +41,10 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>EliminarServlet</servlet-name>
+        <url-pattern>/eliminar</url-pattern>
     </servlet-mapping>
 </web-app>
