--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ hs_err_pid*
 /2_Java/EjemplosServlet/nbproject/private/
 /2_Java/EjemplosServlet/build/
 /2_Java/EjemplosServlet/dist/
+/2_Java/EjemploMVC/nbproject/private/
+/2_Java/EjemploMod_JAR/nbproject/private/
+/2_Java/EjemploMod_JAR/dist/
+/2_Java/EjemploMod_JAR/build/
+/2_Java/EjemploMVC/build/
