--- a/2_Java/EjemploMVC/nbproject/project.properties
+++ b/2_Java/EjemploMVC/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.EjemploMod_JAR.jar=..\\EjemploMod_JAR\\dist\\EjemploMod_JAR.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,8 +37,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.EjemploMod_JAR.jar}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${reference.EjemploMod_JAR.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,6 +68,8 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.EjemploMod_JAR=../EjemploMod_JAR
+reference.EjemploMod_JAR.jar=${project.EjemploMod_JAR}/dist/EjemploMod_JAR.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
